--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "html-to-react": "^1.3.4",
     "querystring": "^0.2.0",
     "request": "^2.88.0"
   }
