--- a/dj_after/package.json
+++ b/dj_after/package.json
@@ -18,8 +18,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "spectre.css": "^0.5.8"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
