--- a/package.json
+++ b/package.json
@@ -1,27 +1,50 @@
 {
-  "name": "project3",
-  "version": "1.0.0",
-  "description": "Our App DJ Share is a browser based app that allows the primarary user to host a playlist and invite guest users to add to the hosted playlist.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "dj_after",
+  "version": "0.1.0",
+  "private": true,
+  "engines": {
+    "npm": "5.7.1",
+    "node": "9.5.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/leachandryan/Project_DJshare.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/leachandryan/Project_DJshare/issues"
-  },
-  "homepage": "https://github.com/leachandryan/Project_DJshare#readme",
   "dependencies": {
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.5",
+    "axios": "^0.18.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
+    "connect-mongo": "^2.0.3",
     "express": "^4.16.4",
-    "html-to-react": "^1.3.4",
-    "querystring": "^0.2.0",
-    "request": "^2.88.0"
-  }
+    "express-session": "^1.15.6",
+    "gh-pages": "^3.1.0",
+    "mongoose": "^5.4.4",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.9",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "api": "nodemon ./server/server.js",
+    "dev": "concurrently \"react-scripts start\" \"nodemon server/server.js\""
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.1",
+    "nodemon": "^1.17.5"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "proxy": "http://localhost:8080"
 }
